2003-06-04  Joe Mistachkin  <joe@mistachkin.com>

        * tools/man2help.tcl: Added duplicate help section checking
        * tools/index.tcl:    and corrected a comment typo for the 
        getTopics proc in index.tcl [Bug #748700].

2003-06-02  Vince Darley  <vincentdarley@users.sourceforge.net>

	* win/tclWinFCmd.c:
        * tests/fCmd.test: fix to [Bug #747575] in which a bad error
        message is given when trying to rename a busy directory to
        one with the same prefix, but not the same name.  Added three
        new tests.
        
2003-05-23  D. Richard Hipp <drh@hwaci.com>

	* win/tclWinTime.c: Add tests to detect and avoid a division by zero
	in the windows precision timer calibration logic.

2003-05-23  Don Porter  <dgp@users.sourceforge.net>

        * generic/tclObj.c (tclCmdNameType):  Converted internal rep
        management of the cmdName Tcl_ObjType the opposite way, to always
        use the twoPtrValue instead of always using the otherValuePtr.
        Previous fix on 2003-05-12 broke several extensions that wanted
        to poke around with the twoPtrValue.ptr2 value of a cmdName
        Tcl_Obj, like TclBlend and e4graph.  [Bug 726018]
        Thanks to George Petasis for the bug report and Jacob Levy for
        testing assistance.

2003-05-23  Mo DeJong  <mdejong@users.sourceforge.net>

	* unix/mkLinks: Set the var S to "" at the top
	of the file to avoid error when user has set S
	to something.
	[Tk Bug #739833]

2003-05-22  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Tcl.pbproj/project.pbxproj: added missing references to
	new source files tclPathObj.c and tclMacOSXFCmd.c.

	* macosx/tclMacOSXBundle.c: fixed a problem that caused only the
	first call to Tcl_MacOSXOpenVersionedBundleResources() for a given
	bundle identifier to succeed. This caused the tcl runtime library
	not to be found in all interps created after the inital one.
	
2003-05-19  Kevin B. Kenny  <kennykb@hippolyta>
